--- a/render.yaml
+++ b/render.yaml
@@ -17,11 +17,11 @@ services:
       - key: ALLOWED_HOSTS
         value: "evigdia.onrender.com,localhost"  # Added localhost for safety
       - key: RENDER_HEALTHCHECK_URL
-        value: "https://evigdia.onrender.com/health"
+        value: "https://evigdia.onrender.com/api/user/health/"
       - key: CSRF_TRUSTED_ORIGINS
         value: "https://evigdia.onrender.com"
       - key: PYTHONPATH
         value: "/opt/render/project/src"  # Critical for module resolution
-    healthCheckPath: /health
+    healthCheckPath: /api/user/health/
     autoDeploy: true
     plan: free
